# AgenticSystems

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/chatbot-ui/: Makefile  streamlit_app.py
src/chatbot-ui/notebook/: data.ipynb
